k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio

spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: portfolio
        image: nnksantosh/portfolio:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
