k8s/base/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress

# metadata:
#   name: portfolio1-ingress
#   namespace: portfolio1
#   annotations:
#     kubernetes.io/ingress.class: nginx

# spec:
#   ingressClassName: nginx

#   rules:
#   - host: mywebapage.site
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: portfolio1-service
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio1-ingress
  namespace: portfolio1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - mywebapage.site
    secretName: portfolio1-tls

  rules:
  - host: mywebapage.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio1-service
            port:
              number: 80
